# flint-rust

./: .clang-format  .dir-locals.el  Cargo.toml  build.rs
benches/: benchmarks.rs
src/: arith.rs  binding.rs  bindings.rs  flint_wrapper.c  fmpq.rs  fmpq_mat.rs  fmpq_poly.rs  fmpz.rs  fmpz_mat.rs  fmpz_poly.rs  fmpz_wrapper.c  lib.rs  macros.rs  traits.rs  ulong_extras.rs
tests/: lib.rs  tests.rs
