[package]
name = "flint"
version = "0.1.0"
authors = ["Sho Takemori <stakemorii@gmail.com>"]
build = "build.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
libc = "0.2.23"
rust-gmp = { git = "https://github.com/stakemori/rust-gmp.git", branch = "develop"}
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
serde_json = "*"